cmake_minimum_required(VERSION 2.6.3)
PROJECT(tests)

#make the list with all the source files
FILE(GLOB_RECURSE SOURCES "${CMAKE_SOURCE_DIR}/tests/src/*.cpp" )


INCLUDE_DIRECTORIES(
	${OPENSSL_INCLUDE_DIRS}
	${LUA_INCLUDE_DIRS}
	${CMAKE_SOURCE_DIR}/common/include
	${CMAKE_SOURCE_DIR}/thelib/include
	${CMAKE_SOURCE_DIR}/tests/include
)

ADD_EXECUTABLE(${PROJECT_NAME}  ${SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} 
	common 
	thelib 
	${SOCKET_LIB} 
	${OPENSSL_LIBRARIES}
	${TINYXML_LIBRARIES}
	${LUA_LIBRARIES}
	${DL_LIBRARY_PATH})
